--- a/from.html
+++ b/from.html
@@ -104,106 +104,106 @@
 		</table>
 
 		<datalist id="day">
-			<option value="1"/>
-			<option value="2"/>
-			<option value="3"/>
-			<option value="4"/>
-			<option value="5"/>
-			<option value="6"/>
-			<option value="7"/>
-			<option value="8"/>
-			<option value="9"/>
-			<option value="10"/>
-			<option value="11"/>
-			<option value="12"/>
-			<option value="13"/>
-			<option value="14"/>
-			<option value="15"/>
-			<option value="16"/>
-			<option value="17"/>
-			<option value="18"/>
-			<option value="19"/>
-			<option value="20"/>
-			<option value="21"/>
-			<option value="22"/>
-			<option value="23"/>
-			<option value="24"/>
-			<option value="25"/>
-			<option value="26"/>
-			<option value="27"/>
-			<option value="28"/>
-			<option value="29"/>
-			<option value="30"/>
-			<option value="31"/>
+			<option value="1"> </option>
+			<option value="2"> </option>
+			<option value="3"> </option>
+			<option value="4"> </option>
+			<option value="5"> </option>
+			<option value="6"> </option>
+			<option value="7"> </option>
+			<option value="8"> </option>
+			<option value="9"> </option>
+			<option value="10"> </option>
+			<option value="11"> </option>
+			<option value="12"> </option>
+			<option value="13"> </option>
+			<option value="14"> </option>
+			<option value="15"> </option>
+			<option value="16"> </option>
+			<option value="17"> </option>
+			<option value="18"> </option>
+			<option value="19"> </option>
+			<option value="20"> </option>
+			<option value="21"> </option>
+			<option value="22"> </option>
+			<option value="23"> </option>
+			<option value="24"> </option>
+			<option value="25"> </option>
+			<option value="26"> </option>
+			<option value="27"> </option>
+			<option value="28"> </option>
+			<option value="29"> </option>
+			<option value="30"> </option>
+			<option value="31"> </option>
 		</datalist>
 
 		<datalist id="month">
-			<option value="January "/>
-			<option value="February"/>
-			<option value="March"/>
-			<option value="April"/>
-			<option value="May"/>
-			<option value="June"/>
-			<option value="July"/>
-			<option value="August"/>
-			<option value="September"/>
-			<option value="October"/>
-			<option value="November"/>
-			<option value="December "/>
+			<option value="January "> </option>
+			<option value="February"> </option>
+			<option value="March"> </option>
+			<option value="April"> </option>
+			<option value="May"> </option>
+			<option value="June"> </option>
+			<option value="July"> </option>
+			<option value="August"> </option>
+			<option value="September"> </option>
+			<option value="October"> </option>
+			<option value="November"> </option>
+			<option value="December "> </option>
 		</datalist>
 		<datalist id="year">
-			<option value="1980"/>
-			<option value="1981"/>
-			<option value="1982"/>
-			<option value="1983"/>
-			<option value="1984"/>
-			<option value="1985"/>
-			<option value="1986"/>
-			<option value="1987"/>
-			<option value="1988"/>
-			<option value="1989"/>
-			<option value="1990"/>
-			<option value="1991"/>
-			<option value="1992"/>
-			<option value="1993"/>
-			<option value="1994"/>
-			<option value="1995"/>
-			<option value="1996"/>
-			<option value="1997"/>
-			<option value="1998"/>
-			<option value="1999"/>
-			<option value="2000"/>
-			<option value="2001"/>
-			<option value="2002"/>
-			<option value="2003"/>
-			<option value="2004"/>
-			<option value="2005"/>
-			<option value="2006"/>
-			<option value="2007"/>
-			<option value="2008"/>
-			<option value="2009"/>
-			<option value="2010"/>
-			<option value="2011"/>
-			<option value="2012"/>
-			<option value="2013"/>
-			<option value="2014"/>
-			<option value="2015"/>
-			<option value="2016"/>
-			<option value="2017"/>
-			<option value="2018"/>
-			<option value="2019"/>
-			<option value="2020"/>
-			<option value="2021"/>
-			<option value="2022"/>
-			<option value="2023"/>
-			<option value="2024"/>
-			<option value="2025"/>
-			<option value="2026"/>
-			<option value="2027"/>
-			<option value="2028"/>
-			<option value="2029"/>
-			<option value="2030"/>
-			<option value="2031"/>
+			<option value="1980"> </option>
+			<option value="1981"> </option>
+			<option value="1982"> </option>
+			<option value="1983"> </option>
+			<option value="1984"> </option>
+			<option value="1985"> </option>
+			<option value="1986"> </option
+			<option value="1987"> </option>
+			<option value="1988"> </option>
+			<option value="1989"> </option>
+			<option value="1990"> </option>
+			<option value="1991"> </option>
+			<option value="1992"> </option>
+			<option value="1993"> </option>
+			<option value="1994"> </option>
+			<option value="1995"> </option>
+			<option value="1996"> </option>
+			<option value="1997"> </option>
+			<option value="1998"> </option>
+			<option value="1999"> </option>
+			<option value="2000"> </option>
+			<option value="2001"> </option>
+			<option value="2002"> </option>
+			<option value="2003"> </option>
+			<option value="2004"> </option>
+			<option value="2005"> </option>
+			<option value="2006"> </option>
+			<option value="2007"> </option>
+			<option value="2008"> </option>
+			<option value="2009"> </option>
+			<option value="2010"> </option>
+			<option value="2011"> </option>
+			<option value="2012"> </option>
+			<option value="2013"> </option>
+			<option value="2014"> </option>
+			<option value="2015"> </option>
+			<option value="2016"> </option>
+			<option value="2017"> </option>
+			<option value="2018"> </option>
+			<option value="2019"> </option>
+			<option value="2020"> </option>
+			<option value="2021"> </option>
+			<option value="2022"> </option>
+			<option value="2023"> </option>
+			<option value="2024"> </option>
+			<option value="2025"> </option>
+			<option value="2026"> </option>
+			<option value="2027"> </option>
+			<option value="2028"> </option>
+			<option value="2029"> </option> 
+			<option value="2030"> </option> 
+			<option value="2031"> </option> 
 		</datalist>
 		<datalist id="nationality">
 			<option value="Bangladesh"/>
