--- a/from.html
+++ b/from.html
@@ -211,70 +211,70 @@
 		</datalist>
 
 		<datalist id="dist">
-			<option value="Barguna District"/>
-			<option value="Barisal District"/>
-			<option value="Bhola District"/>
-			<option value="Jhalokati District"/>
-			<option value="Patuakhali District"/>
-			<option value="Pirojpur District"/>
-			<option value="Bandarban District"/>
-			<option value="Brahmanbaria District"/>
-			<option value="Chandpur District"/>
-			<option value="Chittagong District"/>
-			<option value="Comilla District"/>
-			<option value="Cox's Bazar District"/>
-			<option value="Feni District"/>
-			<option value="Khagrachhari District"/>
-			<option value="Lakshmipur District"/>
-			<option value="Noakhali District"/>
-			<option value="Rangamati District"/>
-			<option value="Dhaka District"/>
-			<option value="Faridpur District"/>
-			<option value="Gazipur District"/>
-			<option value="Gopalganj District"/>
-			<option value="Kishoreganj District"/>
-			<option value="Madaripur District"/>
-			<option value="Manikganj District"/>
-			<option value="Munshiganj District"/>
-			<option value="Narayanganj District"/>
-			<option value="Narsingdi District"/>
-			<option value="Rajbari District"/>
-			<option value="Shariatpur District"/>
-			<option value="Tangail District"/>
-			<option value="Bagerhat District"/>
-			<option value="Chuadanga District"/>
-			<option value="Jessore District"/>
-			<option value="Khulna District"/>
-			<option value="Jhenaidah District"/>
-			<option value="Khulna District"/>
-			<option value="Kushtia District"/>
-			<option value="Magura District"/>
-			<option value="Meherpur District"/>
-			<option value="Narail District"/>
-			<option value="Satkhira District"/>
-			<option value="Jamalpur District"/>
-			<option value="Mymensingh District"/>
-			<option value="Netrokona District"/>
-			<option value="Sherpur District"/>
-			<option value="Bogra District"/>
-			<option value="Joypurhat District"/>
-			<option value="Naogaon District"/>
-			<option value="Natore District"/>
-			<option value="Chapai Nawabganj District"/>
-			<option value="Pabna District"/>
-			<option value="Rajshahi District"/>
-			<option value="Sirajganj District"/>
-			<option value="Dinajpur District"/>
-			<option value="Gaibandha District"/>
-			<option value="Kurigram District"/>
-			<option value="Lalmonirhat District"/>
-			<option value="Nilphamari District"/>
-			<option value="Panchagarh District"/>
-			<option value="Rangpur District"/>
-			<option value="Thakurgaon District"/>
-			<option value="Habiganj District"/>
-			<option value="Moulvibazar District"/>
-			<option value="Sunamganj District"/>
+			<option value="Barguna District"> </option>
+			<option value="Barisal District"> </option>
+			<option value="Bhola District"> </option>
+			<option value="Jhalokati District"> </option>
+			<option value="Patuakhali District"> </option>
+			<option value="Pirojpur District"> </option>
+			<option value="Bandarban District"> </option>
+			<option value="Brahmanbaria District"> </option>
+			<option value="Chandpur District"> </option>
+			<option value="Chittagong District"> </option>
+			<option value="Comilla District"> </option>
+			<option value="Cox's Bazar District"> </option>
+			<option value="Feni District"> </option>
+			<option value="Khagrachhari District"> </option>
+			<option value="Lakshmipur District"> </option>
+			<option value="Noakhali District"> </option>
+			<option value="Rangamati District"> </option>
+			<option value="Dhaka District"> </option>
+			<option value="Faridpur District"> </option>
+			<option value="Gazipur District"> </option>
+			<option value="Gopalganj District"> </option>
+			<option value="Kishoreganj District"> </option>
+			<option value="Madaripur District"> </option>
+			<option value="Manikganj District"> </option>
+			<option value="Munshiganj District"> </option>
+			<option value="Narayanganj District"> </option>
+			<option value="Narsingdi District"> </option>
+			<option value="Rajbari District"> </option>
+			<option value="Shariatpur District"> </option>
+			<option value="Tangail District"> </option>
+			<option value="Bagerhat District"> </option>
+			<option value="Chuadanga District"> </option>
+			<option value="Jessore District"> </option>
+			<option value="Khulna District"> </option>
+			<option value="Jhenaidah District"> </option>
+			<option value="Khulna District"> </option>
+			<option value="Kushtia District"> </option>
+			<option value="Magura District"> </option>
+			<option value="Meherpur District"> </option>
+			<option value="Narail District"> </option>
+			<option value="Satkhira District"> </option>
+			<option value="Jamalpur District"> </option>
+			<option value="Mymensingh District"> </option>
+			<option value="Netrokona District"> </option>
+			<option value="Sherpur District"> </option>
+			<option value="Bogra District"> </option>
+			<option value="Joypurhat District"> </option>
+			<option value="Naogaon District"> </option>
+			<option value="Natore District"> </option>
+			<option value="Chapai Nawabganj District"> </option>
+			<option value="Pabna District"> </option>
+			<option value="Rajshahi District"> </option>
+			<option value="Sirajganj District"> </option>
+			<option value="Dinajpur District"> </option>
+			<option value="Gaibandha District"> </option>
+			<option value="Kurigram District"> </option>
+			<option value="Lalmonirhat District"> </option>
+			<option value="Nilphamari District"> </option>
+			<option value="Panchagarh District"> </option>
+			<option value="Rangpur District"> </option>
+			<option value="Thakurgaon District"> </option>
+			<option value="Habiganj District"> </option>
+			<option value="Moulvibazar District"> </option>
+			<option value="Sunamganj District"> </option>
 		</datalist>
 
 	</body>
