--- a/from.html
+++ b/from.html
@@ -206,7 +206,7 @@
 			<option value="2031"> </option> 
 		</datalist>
 		<datalist id="nationality">
-			<option value="Bangladesh"/>
+			<option value="Bangladesh"></option>
 		
 		</datalist>
 
