--- a/from.html
+++ b/from.html
@@ -158,7 +158,7 @@
 			<option value="1983"> </option>
 			<option value="1984"> </option>
 			<option value="1985"> </option>
-			<option value="1986"> </option
+			<option value="1986"> </option>
 			<option value="1987"> </option>
 			<option value="1988"> </option>
 			<option value="1989"> </option>
